remove the un needed JVM args